--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <ul>
                 <li>Visitare la Tower of London<strong>&cross;</strong></li>
                 <li>Visitare greenwich<strong>&check;</strong></li>
-                <li>Ascoltare un artista di strada a Coven Garden<strong>&check;</strong></li>
+                <li>Ascoltare un artista di strada a Covent Garden<strong>&check;</strong></li>
                 <li>Mangiare il tipico Fish and Chips inglese<strong>&cross;</strong></li>
             </ul>
         </section>
