--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <!-- Le foto -->
             <h2>Le foto</h2>
             <!-- Prima foto -->
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto 1">
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto 1" height="400px">
             <!-- Seconda foto -->
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto 2">
+            <img src="https://i.insider.com/58663ad6dd0895427f8b4a76?width=1200" alt="Foto 2" height="400px">
         </section>
     </main>
 </body>
